debian8, 15.04 onmetal, kernel tuning for xen images, fixes

--- a/Debian_8_Teeth.cfg
+++ b/Debian_8_Teeth.cfg
@@ -14,7 +14,7 @@ d-i mirror/http/directory string /debian
 d-i mirror/http/proxy string
 
 # version
-d-i mirror/suite string unstable
+d-i mirror/suite string jessie
 
 ### Account setup
 # Skip creation of a root account (normal user account will be able to
@@ -24,8 +24,8 @@ d-i mirror/suite string unstable
 d-i passwd/make-user boolean false
 
 # Root password, either in clear text
-d-i passwd/root-password password wedeletepasswordinpost
-d-i passwd/root-password-again password wedeletepasswordinpost
+d-i passwd/root-password password novaagentneedsunlockedrootaccountsowedeletepasswordinpost
+d-i passwd/root-password-again password novaagentneedsunlockedrootaccountsowedeletepasswordinpost
 # or encrypted using an MD5 hash.
 #d-i passwd/root-password-crypted password [MD5 hash]
 
@@ -35,14 +35,24 @@ d-i clock-setup/ntp boolean true
 d-i time/zone string Etc/UTC
 
 ### Apt setup
-d-i apt-setup/services-select multiselect none
+d-i apt-setup/services-select multiselect security, updates
+d-i apt-setup/security_host string mirror.rackspace.com/debian-security
+#d-i apt-setup/local0/repository string http://mirror.rackspace.com/debian/ wheezy-backports main
 d-i apt-setup/local0/source boolean true
 
 ### Partitioning
+
 d-i partman-auto/method string regular
-d-i partman-auto/disk /dev/vda
+d-i partman-auto/disk /dev/sda
 d-i partman-basicfilesystems/no_swap boolean false
-d-i partman-auto/choose_recipe select atomic
+#d-i partman-auto/choose_recipe select atomic
+d-i partman-auto/expert_recipe string \
+	root :: 100% 50 100% ext3 \
+        $primary{ } $bootable{ } method{ format } \
+        format{ } use_filesystem{ } filesystem{ ext3 } \
+        mountpoint{ / } \
+	. \
+
 d-i partman-partitioning/confirm_write_new_label boolean true
 d-i partman/choose_partition select finish
 d-i partman/confirm boolean true
@@ -50,15 +60,15 @@ d-i partman/confirm_nooverwrite boolean true
 d-i partman/mount_style select traditional
 
 ### Grub
-d-i grub-pc/install_devices string /dev/vda
-grub-installer grub-installer/bootdev string /dev/vda
+d-i grub-pc/install_devices string /dev/sda
+grub-installer grub-installer/bootdev string /dev/sda
 
 ### Base system installation
 tasksel tasksel/first multiselect minimal
 
 ### Package selection
-cloud-init cloud-init/datasources multiselect NoCloud, ConfigDrive
-d-i pkgsel/include string openssh-server rsync wget sudo curl resolvconf parted debconf-utils cloud-init cloud-initramfs-dyn-netconf cloud-initramfs-growroot heat-cfntools
+cloud-init cloud-init/datasources multiselect None, ConfigDrive
+d-i pkgsel/include string openssh-server sudo rsync wget parted debconf-utils cloud-init cloud-initramfs-dyn-netconf cloud-initramfs-growroot ifenslave-2.6 vlan curl
 
 # Whether to upgrade packages after debootstrap.
 # Allowed values: none, safe-upgrade, full-upgrade
@@ -74,4 +84,11 @@ d-i cdrom-detect/eject boolean false
 # This will power off the machine instead of just halting it.
 d-i debian-installer/exit/poweroff boolean true
 
-d-i preseed/late_command string rm -f /usr/lib/finish-install.d/55netcfg-copy-config; echo "deb http://mirror.rackspace.com/debian sid main" > /target/etc/apt/sources.list; echo "deb-src http://mirror.rackspace.com/debian sid main" >> /target/etc/apt/sources.list; in-target apt-get update; in-target apt-get -y dist-upgrade; chroot /target sh -c "mkdir /tmp/tmp; cd /tmp/tmp; wget http://KICK_HOST/kickstarts/Debian_Unstable_KVM_post.sh; chmod +x Debian_Unstable_KVM_post.sh; bash -x Debian_Unstable_KVM_post.sh; rm -rf /tmp/tmp"
+# use a static hostname so dhcp values don't creep into the image
+d-i netcfg/hostname string debian
+
+d-i preseed/late_command string rm -f /usr/lib/finish-install.d/55netcfg-copy-config;\
+in-target apt-get update;\
+in-target apt-get -y dist-upgrade;\
+in-target apt-get -y install resolvconf;\
+chroot /target sh -c "mkdir /tmp/tmp; cd /tmp/tmp; wget http://KICK_HOST/kickstarts/Debian_8_Teeth_post.sh; chmod +x Debian_8_Teeth_post.sh; bash -x Debian_8_Teeth_post.sh; rm -rf /tmp/tmp"
