--- a/Red_Hat_Enterprise_Linux_6.cfg
+++ b/Red_Hat_Enterprise_Linux_6.cfg
@@ -228,6 +228,16 @@ cloud_config_modules:
  - disable-ec2-metadata
  - runcmd
  - byobu
+# this bit scales some sysctl parameters to flavor type
+bootcmd:
+  - echo "net.ipv4.tcp_rmem = $(cat /proc/sys/net/ipv4/tcp_mem)" >> /etc/sysctl.conf
+  - echo "net.ipv4.tcp_wmem = $(cat /proc/sys/net/ipv4/tcp_mem)" >> /etc/sysctl.conf
+  - echo "net.core.rmem_max = $(cat /proc/sys/net/ipv4/tcp_mem | awk {'print $3'})" >> /etc/sysctl.conf
+  - echo "net.core.wmem_max = $(cat /proc/sys/net/ipv4/tcp_mem | awk {'print $3'})" >> /etc/sysctl.conf
+  - echo 'net.ipv4.tcp_window_scaling = 1' >> /etc/sysctl.conf
+  - echo 'net.ipv4.tcp_timestamps = 1' >> /etc/sysctl.conf
+  - echo 'net.ipv4.tcp_sack = 1' >> /etc/sysctl.conf
+  - sysctl -p
 EOF
 
 # cloud-init / nova-agent sad panda hack
