--- a/Red_Hat_Enterprise_Linux_6_VMware_Rax.cfg
+++ b/Red_Hat_Enterprise_Linux_6_VMware_Rax.cfg
@@ -6,6 +6,9 @@ cmdline
 #url --url=http://intra.mirror.rackspace.com/kickstart/rhel-x86_64-server-6/
 cdrom
 repo --name=base --baseurl=http://intra.mirror.rackspace.com/kickstart/rhel-x86_64-server-6/
+repo --name=common --baseurl=http://INTERNAL_HOST/centos-repos/rackspace-rhel-x86_64-server-6-common/
+repo --name=optional --baseurl=http://INTERNAL_HOST/centos-repos/rhel-x86_64-server-optional-6/
+repo --name=suse-tools --baseurl=http://INTERNAL_HOST/centos-repos/centos6-x86_64-suse-tools/
 repo --name=epel --baseurl=http://mirror.rackspace.com/epel/6/x86_64/
 
 # Language and keyboard setup
@@ -47,8 +50,9 @@ bootloader --timeout=1 --append="console=hvc0"
 poweroff
 
 # Minimal package set
-%packages --excludedocs --nobase
+%packages
 @core
+@base
 epel-release
 kernel
 rsync
@@ -72,6 +76,49 @@ bc
 perl-Crypt-SSLeay
 perl-TermReadKey
 perl-libwww-perl
+python-cement
+# 
+autoconf
+automake
+bison
+boost
+compat-libstdc++-33
+device-mapper
+device-mapper-event
+device-mapper-multipath
+elfutils
+gcc
+kernel-devel
+kernel-headers
+m4
+mcelog
+mutt
+nc
+net-snmp
+net-snmp-utils
+net-tools
+nmap
+ntp
+OpenIPMI
+OpenIPMI-libs
+osad
+perl-Crypt-SSLeay
+perl-libwww-perl
+postfix
+python-hwdata
+rhn-client-tools
+rhncfg
+rhncfg-actions
+rhncfg-client
+rpm-build
+#rs-release
+rs-sysmon
+#rs-tools
+screen
+sharutils
+smartmontools
+strace
+#xfsprogs
 
 %end
 
@@ -178,14 +225,6 @@ system_info:
   distro: rhel
 EOF
 
-# separate tmp file
-rm -rf /tmp/*
-dd if=/dev/zero of=/etc/TMPFILE.img bs=1 count=1 seek=2147483648
-yes | mkfs.ext4 /etc/TMPFILE.img
-mount -o loop,rw /etc/TMPFILE.img /mnt
-chmod 1777 /mnt
-umount /mnt
-
 # use a static fstab
 cat > /etc/fstab <<'EOF'
 # Accessible filesystems, by reference, are maintained under '/dev/disk'
@@ -231,9 +270,14 @@ rpm -Uvh /tmp/tmp/vmware-tools*
 yum -y install vmware-tools-esx-kmods
 yum -y install vmware-tools-esx
 
+# package need for our RHN registration to work
+wget http://KICK_HOST/rs-tools/rhn-org-trusted-ssl-cert-1.0-1.noarch.rpm
+rpm -Uvh rhn-org-trusted-ssl-cert*
+
 # rs-rhntools
-wget --directory-prefix=/tmp/tmp http://dl.rpmdev.rackspace.com/rpmdev/stable/Redhat/6/x86_64/rs-tools-0.1.18-1.el6.noarch.rpm
-wget --directory-prefix=/tmp/tmp http://dl.rpmdev.rackspace.com/rpmdev/stable/Redhat/6/x86_64/rs-tools-rhn-0.1.18-1.el6.noarch.rpm
+wget --directory-prefix=/tmp/tmp http://KICK_HOST/rs-tools/rs-tools-0.1.18-1.el6.noarch.rpm
+wget --directory-prefix=/tmp/tmp http://KICK_HOST/rs-tools/rs-tools-rhn-0.1.18-1.el6.noarch.rpm
+wget --directory-prefix=/tmp/tmp http://KICK_HOST/rs-tools/rs-release-0.1-5.rs.el6.noarch.rpm
 rpm -Uvh /tmp/tmp/rs*.rpm
 
 # dirty hack for NoCloud datasource fail
@@ -248,10 +292,6 @@ echo > /etc/yum.repos.d/rhel-source.repo
 
 # force grub to use generic disk labels, bootloader above does not do this
 sed -i 's%root=.*%root=/dev/sda1%g' /boot/grub/grub.conf
-
-# package need for our RHN registration to work
-#wget http://dfw.rhn.rackspace.com/pub/rhn-org-trusted-ssl-cert-1.0-1.noarch.rpm
-#rpm -Uvh rhn-org-trusted-ssl-cert*
 
 # no soup for you
 cat >> /etc/yum.conf <<'EOF'
@@ -270,6 +310,14 @@ EOF
 # log packages
 wget http://KICK_HOST/kickstarts/package_postback.sh
 bash package_postback.sh Red_Hat_Enterprise_Linux_6_VMware_Rax
+
+# separate tmp file
+rm -rf /tmp/*
+dd if=/dev/zero of=/etc/TMPFILE.img bs=1 count=1 seek=2147483648
+yes | mkfs.ext4 /etc/TMPFILE.img
+mount -o loop,rw /etc/TMPFILE.img /mnt
+chmod 1777 /mnt
+umount /mnt
 
 # clean up
 yum clean all
