--- a/Fedora_21_Teeth.cfg
+++ b/Fedora_21_Teeth.cfg
@@ -110,6 +110,9 @@ NETWORKING=yes
 NOZEROCONF=yes
 EOF
 
+# fix dns
+echo "dns=none" >> /etc/NetworkManager/NetworkManager.conf
+
 # For cloud images, 'eth0' _is_ the predictable device name, since
 # we don't want to be tied to specific virtual (!) hardware
 rm -f /etc/udev/rules.d/70*
@@ -179,16 +182,16 @@ cloud_init_modules:
  - ssh
 
 # this bit scales some sysctl parameters to flavor type
-bootcmd:
-  - echo "net.ipv4.tcp_rmem = $(cat /proc/sys/net/ipv4/tcp_mem)" >> /etc/sysctl.conf
-  - echo "net.ipv4.tcp_wmem = $(cat /proc/sys/net/ipv4/tcp_mem)" >> /etc/sysctl.conf
-  - echo "net.core.rmem_max = $(cat /proc/sys/net/ipv4/tcp_mem | awk {'print $3'})" >> /etc/sysctl.conf
-  - echo "net.core.wmem_max = $(cat /proc/sys/net/ipv4/tcp_mem | awk {'print $3'})" >> /etc/sysctl.conf
-  - echo 'net.ipv4.tcp_window_scaling = 1' >> /etc/sysctl.conf
-  - echo 'net.ipv4.tcp_timestamps = 1' >> /etc/sysctl.conf
-  - echo 'net.ipv4.tcp_sack = 1' >> /etc/sysctl.conf
-  - sysctl -p
-EOF
+#bootcmd:
+#  - echo "net.ipv4.tcp_rmem = $(cat /proc/sys/net/ipv4/tcp_mem)" >> /etc/sysctl.conf
+#  - echo "net.ipv4.tcp_wmem = $(cat /proc/sys/net/ipv4/tcp_mem)" >> /etc/sysctl.conf
+#  - echo "net.core.rmem_max = $(cat /proc/sys/net/ipv4/tcp_mem | awk {'print $3'})" >> /etc/sysctl.conf
+#  - echo "net.core.wmem_max = $(cat /proc/sys/net/ipv4/tcp_mem | awk {'print $3'})" >> /etc/sysctl.conf
+#  - echo 'net.ipv4.tcp_window_scaling = 1' >> /etc/sysctl.conf
+#  - echo 'net.ipv4.tcp_timestamps = 1' >> /etc/sysctl.conf
+#  - echo 'net.ipv4.tcp_sack = 1' >> /etc/sysctl.conf
+#  - sysctl -p
+#EOF
 
 # Cloud init logging config fix for verbose
 sed -i 's/ - \[ \*log_base, \*log_syslog ]/# - \[ \*log_base, \*log_syslog ]/g' /etc/cloud/cloud.cfg.d/05_logging.cfg
