ssh_host_ed25519_key fixes, onmetal cloud-init upgrades/fixes for rc2

--- a/CentOS_6_Teeth.cfg
+++ b/CentOS_6_Teeth.cfg
@@ -56,6 +56,10 @@ cloud-utils
 cloud-utils-growpart
 dracut-modules-growroot
 yum-plugin-versionlock
+pyserial
+python-jinja2
+python-oauth
+rsyslog
 
 %end
 
