--- a/CentOS_7_Teeth.cfg
+++ b/CentOS_7_Teeth.cfg
@@ -72,6 +72,10 @@ PyYAML
 net-tools
 qemu-img
 policycoreutils-python
+pyserial
+python-jinja2
+python-oauth
+rsyslog
 
 %end
 
@@ -157,14 +161,15 @@ cd /tmp/tmp
 #echo 'vm.swappiness = 0' >> /etc/sysctl.conf
 
 # teeth cloud-init
-wget http://98f7490b5235468aa0c1-f20868e4072493c909d50c027a960948.r72.cf2.rackcdn.com/cloud-init-0.7.5-14rackspace.x86_64.rpm
+#wget http://98f7490b5235468aa0c1-f20868e4072493c909d50c027a960948.r72.cf2.rackcdn.com/cloud-init-0.7.5-14rackspace.x86_64.rpm
+wget http://KICK_HOST/cloud-init/cloud-init-teeth-fc21.rpm
 rpm -Uvh --nodeps cloud*.rpm
 yum versionlock add cloud-init
 
 cat > /etc/cloud/cloud.cfg.d/10_rackspace.cfg <<'EOF'
 disable_root: False
 ssh_pwauth: False
-ssh_deletekeys: True
+ssh_deletekeys: False
 resize_rootfs: noblock
 manage_etc_hosts: localhost
 growpart:
