--- a/Fedora_21_Teeth.cfg
+++ b/Fedora_21_Teeth.cfg
@@ -64,6 +64,10 @@ tar
 wget
 curl
 python-jsonpatch
+pyserial
+python-jinja2
+python-oauth
+rsyslog
 yum-plugin-versionlock
 -dracut-config-rescue
 -biosdevname
@@ -133,7 +137,8 @@ cat > /etc/hosts << EOF
 EOF
 
 # custom cloud-init rpm
-wget http://7b52f5445f1d047c988b-5b9b71e9a69b2db171149d34296914b6.r70.cf2.rackcdn.com/cloud-init-0.7.5-14rackspace.x86_64.rpm
+wget http://KICK_HOST/cloud-init/cloud-init-teeth-fc21.rpm
+#wget http://7b52f5445f1d047c988b-5b9b71e9a69b2db171149d34296914b6.r70.cf2.rackcdn.com/cloud-init-0.7.5-14rackspace.x86_64.rpm
 rpm -Uvh --nodeps cloud*.rpm
 yum versionlock add cloud-init
 chkconfig cloud-init on
@@ -142,7 +147,7 @@ chkconfig cloud-init on
 cat > /etc/cloud/cloud.cfg.d/10_rackspace.cfg <<'EOF'
 disable_root: False
 ssh_pwauth: False
-ssh_deletekeys: True
+ssh_deletekeys: False
 resize_rootfs: noblock
 manage_etc_hosts: localhost
 growpart:
@@ -150,6 +155,12 @@ growpart:
   devices: ['/']
 system_info:
   distro: fedora
+  default_user:
+    name: fedora
+    lock_passwd: True
+    gecos: Fedora
+    groups: []
+    sudo: ["ALL=(ALL) NOPASSWD:ALL"]
 
 cloud_config_modules:
  - disk_setup
@@ -181,17 +192,16 @@ cloud_init_modules:
  - users-groups
  - ssh
 
-# this bit scales some sysctl parameters to flavor type
-#bootcmd:
-#  - echo "net.ipv4.tcp_rmem = $(cat /proc/sys/net/ipv4/tcp_mem)" >> /etc/sysctl.conf
-#  - echo "net.ipv4.tcp_wmem = $(cat /proc/sys/net/ipv4/tcp_mem)" >> /etc/sysctl.conf
-#  - echo "net.core.rmem_max = $(cat /proc/sys/net/ipv4/tcp_mem | awk {'print $3'})" >> /etc/sysctl.conf
-#  - echo "net.core.wmem_max = $(cat /proc/sys/net/ipv4/tcp_mem | awk {'print $3'})" >> /etc/sysctl.conf
-#  - echo 'net.ipv4.tcp_window_scaling = 1' >> /etc/sysctl.conf
-#  - echo 'net.ipv4.tcp_timestamps = 1' >> /etc/sysctl.conf
-#  - echo 'net.ipv4.tcp_sack = 1' >> /etc/sysctl.conf
-#  - sysctl -p
-#EOF
+bootcmd:
+  - echo "net.ipv4.tcp_rmem = $(cat /proc/sys/net/ipv4/tcp_mem)" >> /etc/sysctl.conf
+  - echo "net.ipv4.tcp_wmem = $(cat /proc/sys/net/ipv4/tcp_mem)" >> /etc/sysctl.conf
+  - echo "net.core.rmem_max = $(cat /proc/sys/net/ipv4/tcp_mem | awk {'print $3'})" >> /etc/sysctl.conf
+  - echo "net.core.wmem_max = $(cat /proc/sys/net/ipv4/tcp_mem | awk {'print $3'})" >> /etc/sysctl.conf
+  - echo 'net.ipv4.tcp_window_scaling = 1' >> /etc/sysctl.conf
+  - echo 'net.ipv4.tcp_timestamps = 1' >> /etc/sysctl.conf
+  - echo 'net.ipv4.tcp_sack = 1' >> /etc/sysctl.conf
+  - sysctl -p
+EOF
 
 # Cloud init logging config fix for verbose
 sed -i 's/ - \[ \*log_base, \*log_syslog ]/# - \[ \*log_base, \*log_syslog ]/g' /etc/cloud/cloud.cfg.d/05_logging.cfg
