--- a/Ubuntu_12.04_PVHVM.cfg
+++ b/Ubuntu_12.04_PVHVM.cfg
@@ -103,7 +103,7 @@ cat > /etc/cloud/cloud.cfg.d/10_rackspace.cfg <<'EOF'
 apt_preserve_sources_list: True
 disable_root: False
 ssh_pwauth: True
-ssh_deletekeys: True
+ssh_deletekeys: False
 resize_rootfs: True
 # this bit scales some sysctl parameters to flavor type
 bootcmd:
