--- a/Ubuntu_12.04_Teeth.cfg
+++ b/Ubuntu_12.04_Teeth.cfg
@@ -88,6 +88,11 @@ python-prettytable
 python-serial
 python-jsonpatch
 python-json-pointer
+python-jinja2
+python3-serial
+python3-yaml
+python-requests
+python-six
 
 %post --interpreter /bin/bash
 
