--- a/Ubuntu_14.04.cfg
+++ b/Ubuntu_14.04.cfg
@@ -108,7 +108,7 @@ cat > /etc/cloud/cloud.cfg.d/10_rackspace.cfg <<'EOF'
 apt_preserve_sources_list: True
 disable_root: False
 ssh_pwauth: True
-ssh_deletekeys: True
+ssh_deletekeys: False
 resize_rootfs: False
 # this bit scales some sysctl parameters to flavor type
 bootcmd:
