--- a/Ubuntu_14.04_Teeth.cfg
+++ b/Ubuntu_14.04_Teeth.cfg
@@ -83,6 +83,12 @@ parted
 ifenslave-2.6
 vlan
 curl
+python-jinja2
+python3-serial
+python3-yaml
+python-jsonpatch
+python-oauthlib
+init-system-helpers
 
 %post 
 #--interpreter /bin/bash
