--- a/Debian_Unstable_Teeth.cfg
+++ b/Debian_Unstable_Teeth.cfg
@@ -68,7 +68,7 @@ tasksel tasksel/first multiselect minimal
 
 ### Package selection
 cloud-init cloud-init/datasources multiselect None, ConfigDrive
-d-i pkgsel/include string openssh-server sudo rsync firmware-linux-free wget parted debconf-utils cloud-init cloud-initramfs-dyn-netconf cloud-initramfs-growroot ifenslave-2.6 vlan curl
+d-i pkgsel/include string openssh-server sudo rsync firmware-linux-free wget parted debconf-utils cloud-init cloud-initramfs-dyn-netconf cloud-initramfs-growroot ifenslave-2.6 vlan curl python-jinja2 python3-serial python3-yaml python-jsonpatch python-oauthlib python-jwt
 
 # Whether to upgrade packages after debootstrap.
 # Allowed values: none, safe-upgrade, full-upgrade
