--- a/Fedora_20_Teeth.cfg
+++ b/Fedora_20_Teeth.cfg
@@ -89,6 +89,10 @@ tar
 wget
 curl
 python-jsonpatch
+pyserial
+python-jinja2
+python-oauth
+rsyslog
 
 # Some things from @core we can do without in a minimal install
 -biosdevname
@@ -179,7 +183,8 @@ systemctl mask tmp.mount
 #fi
 
 # custom cloud-init rpm
-wget http://e028e7f8a9ee248ee36f-d4376fa0971cb5b07c694c74c2422163.r87.cf5.rackcdn.com/cloud-init-0.7.5-14rackspace.x86_64.rpm
+wget http://KICK_HOST/cloud-init/cloud-init-teeth-fc21.rpm
+#wget http://e028e7f8a9ee248ee36f-d4376fa0971cb5b07c694c74c2422163.r87.cf5.rackcdn.com/cloud-init-0.7.5-14rackspace.x86_64.rpm
 rpm -Uvh --nodeps cloud*.rpm
 yum versionlock add cloud-init
 
@@ -187,7 +192,7 @@ yum versionlock add cloud-init
 cat > /etc/cloud/cloud.cfg.d/10_rackspace.cfg <<'EOF'
 disable_root: False
 ssh_pwauth: False
-ssh_deletekeys: True
+ssh_deletekeys: False
 resize_rootfs: noblock
 manage_etc_hosts: localhost
 growpart:
