--- a/Ubuntu_15.04_PVHVM.cfg
+++ b/Ubuntu_15.04_PVHVM.cfg
@@ -115,7 +115,7 @@ cat > /etc/cloud/cloud.cfg.d/10_rackspace.cfg <<'EOF'
 apt_preserve_sources_list: True
 disable_root: False
 ssh_pwauth: True
-ssh_deletekeys: True
+ssh_deletekeys: False
 resize_rootfs: noblock
 # this bit scales some sysctl parameters to flavor type
 bootcmd:
