fedora22, onmetal cloud-init upgrade changes, kernel tuning via runcmd not bootcmd, various fixes

--- a/CentOS_5.cfg
+++ b/CentOS_5.cfg
@@ -222,6 +222,10 @@ mkinitrd -v --with=xenblk --with=xennet --preload=xenblk --preload=xennet --omit
 wget http://KICK_HOST/kickstarts/package_postback.sh
 bash package_postback.sh CentOS_5
 
+# workaround for rpm database showing rpm verify errors
+rm -f /var/lib/__db*
+rpm --rebuilddb
+
 # clean up
 passwd -d root
 yum clean all
