--- a/CentOS_6_Teeth.cfg
+++ b/CentOS_6_Teeth.cfg
@@ -56,10 +56,11 @@ cloud-utils
 cloud-utils-growpart
 dracut-modules-growroot
 yum-plugin-versionlock
-pyserial
+#pyserial
 python-jinja2
 python-oauth
 rsyslog
+python-pip
 
 %end
 
