--- a/CentOS_7_Teeth.cfg
+++ b/CentOS_7_Teeth.cfg
@@ -73,13 +73,20 @@ net-tools
 qemu-img
 policycoreutils-python
 pyserial
+python-oauth2
 python-jinja2
-python-oauth
+python-requests-oauthlib
 rsyslog
+python-pip
+-selinux-policy-targeted
 
 %end
 
 %post --log=/var/log/post_install.log
+
+# update all
+yum -y update
+
 # setup systemd to boot to the right runlevel
 echo -n "Setting default runlevel to multiuser text mode"
 rm -f /etc/systemd/system/default.target
@@ -90,8 +97,8 @@ echo -n "Disabling persistent journal"
 rmdir /var/log/journal/ 
 
 # this is installed by default but we don't need it in virt
-echo "Removing linux-firmware package."
-yum -C -y remove linux-firmware
+#echo "Removing linux-firmware package."
+#yum -C -y remove linux-firmware
 
 # Non-firewalld-firewall
 echo -n "Writing static firewall"
@@ -133,12 +140,12 @@ echo -n > /lib/udev/rules.d/75-persistent-net-generator.rules
 ln -s /dev/null /etc/udev/rules.d/80-net-name-slot.rules
 
 # simple eth0 config, again not hard-coded to the build hardware
-cat > /etc/sysconfig/network-scripts/ifcfg-eth0 << EOF
-DEVICE="eth0"
-BOOTPROTO="static"
-ONBOOT="yes"
-TYPE="Ethernet"
-EOF
+#cat > /etc/sysconfig/network-scripts/ifcfg-eth0 << EOF
+#DEVICE="eth0"
+#BOOTPROTO="static"
+#ONBOOT="yes"
+#TYPE="Ethernet"
+#EOF
 
 # generic localhost names
 cat > /etc/hosts << EOF
@@ -162,9 +169,11 @@ cd /tmp/tmp
 
 # teeth cloud-init
 #wget http://98f7490b5235468aa0c1-f20868e4072493c909d50c027a960948.r72.cf2.rackcdn.com/cloud-init-0.7.5-14rackspace.x86_64.rpm
-wget http://KICK_HOST/cloud-init/cloud-init-teeth-fc21.rpm
+wget http://KICK_HOST/cloud-init/cloud-init-0.7.7-el7.rpm
 rpm -Uvh --nodeps cloud*.rpm
 yum versionlock add cloud-init
+pip install --upgrade six
+pip install --upgrade configobj
 
 cat > /etc/cloud/cloud.cfg.d/10_rackspace.cfg <<'EOF'
 disable_root: False
@@ -176,7 +185,11 @@ growpart:
   mode: auto
   devices: ['/']
 system_info:
-  distro: fedora
+  distro: rhel
+  default_user:
+    name: root
+    lock_passwd: True
+ssh_svcname: ssh
 
 cloud_config_modules:
  - disk_setup
@@ -209,7 +222,7 @@ cloud_init_modules:
  - ssh
 
 # this bit scales some sysctl parameters to flavor type
-bootcmd:
+runcmd:
   - echo "net.ipv4.tcp_rmem = $(cat /proc/sys/net/ipv4/tcp_mem)" >> /etc/sysctl.conf
   - echo "net.ipv4.tcp_wmem = $(cat /proc/sys/net/ipv4/tcp_mem)" >> /etc/sysctl.conf
   - echo "net.core.rmem_max = $(cat /proc/sys/net/ipv4/tcp_mem | awk {'print $3'})" >> /etc/sysctl.conf
@@ -226,9 +239,6 @@ EOF
 
 # Enable verbose logging in cloud-init
 sed -i 's/ - \[ \*log_base, \*log_syslog ]/# - \[ \*log_base, \*log_syslog ]/g' /etc/cloud/cloud.cfg.d/05_logging.cfg
-
-# update all
-yum -y update
 
 # force grub to use generic disk labels, bootloader above does not do this
 cat >> /etc/sysconfig/grub <<'EOF'
@@ -247,18 +257,15 @@ T4:23:respawn:/sbin/getty -L ttyS4 115200 xterm
 EOF
 
 # our fstab is fonky
-cat > /etc/fstab <<'EOF'
-/dev/sda1 / ext4 errors=remount-ro 0 1
-EOF
+#cat > /etc/fstab <<'EOF'
+#/dev/sda1 / ext4 errors=remount-ro 0 1
+#EOF
 
 # log packages
 wget http://KICK_HOST/kickstarts/package_postback.sh
 bash package_postback.sh CentOS_7_Teeth
 
 /usr/bin/systemctl disable NetworkManager.service
-
-# update all
-yum -y update
 
 # set rackspace mirrors
 #sed -i 's%#baseurl.*%baseurl=http://mirror.rackspace.com/epel/7/x86_64/%g' /etc/yum.repos.d/epel.repo
@@ -276,7 +283,7 @@ truncate -c -s 0 /var/log/yum.log
 echo "" > /etc/machine-id
 rm -f /root/anaconda-ks.cfg
 rm -f /etc/ssh/ssh_host_*
-rm -f /etc/resolv.conf
+echo "" > /etc/resolv.conf
 rm -f /root/.bash_history
 rm -f /root/.nano_history
 rm -f /root/.lesshst
