--- a/Debian_7_Teeth.cfg
+++ b/Debian_7_Teeth.cfg
@@ -64,7 +64,7 @@ tasksel tasksel/first multiselect minimal
 
 ### Package selection
 cloud-init cloud-init/datasources multiselect None, ConfigDrive
-d-i pkgsel/include string openssh-server sudo rsync wget parted debconf-utils cloud-init cloud-initramfs-dyn-netconf cloud-initramfs-growroot ifenslave-2.6 vlan curl python-jinja2 python3-serial python3-yaml init-system-helpers
+d-i pkgsel/include string openssh-server sudo rsync wget parted debconf-utils cloud-init cloud-initramfs-dyn-netconf cloud-initramfs-growroot ifenslave-2.6 vlan curl python-jinja2 python-markupsafe python-pkg-resources python-serial python-six python-pip
 
 # Whether to upgrade packages after debootstrap.
 # Allowed values: none, safe-upgrade, full-upgrade
@@ -86,5 +86,7 @@ d-i netcfg/hostname string debian
 d-i preseed/late_command string rm -f /usr/lib/finish-install.d/55netcfg-copy-config;\
 in-target apt-get update;\
 in-target apt-get -y dist-upgrade;\
+in-target pip install --upgrade six;\
+in-target pip install --upgrade jsonpatch;\
 in-target apt-get -y install resolvconf;\
 chroot /target sh -c "mkdir /tmp/tmp; cd /tmp/tmp; wget http://KICK_HOST/kickstarts/Debian_7_Teeth_post.sh; chmod +x Debian_7_Teeth_post.sh; bash -x Debian_7_Teeth_post.sh; rm -rf /tmp/tmp"
