--- a/Fedora_20_Teeth.cfg
+++ b/Fedora_20_Teeth.cfg
@@ -91,8 +91,9 @@ curl
 python-jsonpatch
 pyserial
 python-jinja2
-python-oauth
+python-oauth2
 rsyslog
+which
 
 # Some things from @core we can do without in a minimal install
 -biosdevname
@@ -116,20 +117,26 @@ echo "################################"
 # set bootable
 parted -s /dev/sda set 1 boot on
 
+# update all
+yum -y update
+yum -y upgrade
+
+# tmp tmp
+mkdir /tmp/tmp
+cd /tmp/tmp
+
 # setup systemd to boot to the right runlevel
 echo -n "Setting default runlevel to multiuser text mode"
 rm -f /etc/systemd/system/default.target
 ln -s /lib/systemd/system/multi-user.target /etc/systemd/system/default.target
-echo .
 
 # If you want to remove rsyslog and just use journald, remove this!
 echo -n "Disabling persistent journal"
 rmdir /var/log/journal/ 
-echo . 
 
 # this is installed by default but we don't need it in virt
-echo "Removing linux-firmware package."
-yum -C -y remove linux-firmware
+#echo "Removing linux-firmware package."
+#yum -C -y remove linux-firmware
 
 # Remove firewalld; was supposed to be optional in F19, but is required to
 # be present for install/image building.
@@ -152,24 +159,22 @@ EOF
 
 # For cloud images, 'eth0' _is_ the predictable device name, since
 # we don't want to be tied to specific virtual (!) hardware
-rm -f /etc/udev/rules.d/70*
-ln -s /dev/null /etc/udev/rules.d/80-net-name-slot.rules
+#rm -f /etc/udev/rules.d/70*
+#ln -s /dev/null /etc/udev/rules.d/80-net-name-slot.rules
 
 # simple eth0 config, again not hard-coded to the build hardware
-cat > /etc/sysconfig/network-scripts/ifcfg-eth0 << EOF
-DEVICE="eth0"
-BOOTPROTO="static"
-ONBOOT="yes"
-TYPE="Ethernet"
-EOF
+#cat > /etc/sysconfig/network-scripts/ifcfg-eth0 << EOF
+#DEVICE="eth0"
+#BOOTPROTO="static"
+#ONBOOT="yes"
+#TYPE="Ethernet"
+#EOF
 
 # generic localhost names
 cat > /etc/hosts << EOF
 127.0.0.1   localhost localhost.localdomain localhost4 localhost4.localdomain4
 ::1         localhost localhost.localdomain localhost6 localhost6.localdomain6
-
 EOF
-echo .
 
 # Because memory is scarce resource in most cloud/virt environments,
 # and because this impedes forensics, we are differing from the Fedora
@@ -183,7 +188,7 @@ systemctl mask tmp.mount
 #fi
 
 # custom cloud-init rpm
-wget http://KICK_HOST/cloud-init/cloud-init-teeth-fc21.rpm
+wget http://KICK_HOST/cloud-init/cloud-init-0.7.7-el7.rpm
 #wget http://e028e7f8a9ee248ee36f-d4376fa0971cb5b07c694c74c2422163.r87.cf5.rackcdn.com/cloud-init-0.7.5-14rackspace.x86_64.rpm
 rpm -Uvh --nodeps cloud*.rpm
 yum versionlock add cloud-init
@@ -232,7 +237,7 @@ cloud_init_modules:
  - ssh
 
 # this bit scales some sysctl parameters to flavor type
-bootcmd:
+runcmd:
   - echo "net.ipv4.tcp_rmem = $(cat /proc/sys/net/ipv4/tcp_mem)" >> /etc/sysctl.conf
   - echo "net.ipv4.tcp_wmem = $(cat /proc/sys/net/ipv4/tcp_mem)" >> /etc/sysctl.conf
   - echo "net.core.rmem_max = $(cat /proc/sys/net/ipv4/tcp_mem | awk {'print $3'})" >> /etc/sysctl.conf
@@ -246,18 +251,14 @@ EOF
 # Cloud init logging config fix for verbose
 sed -i 's/ - \[ \*log_base, \*log_syslog ]/# - \[ \*log_base, \*log_syslog ]/g' /etc/cloud/cloud.cfg.d/05_logging.cfg
 
-# tmp tmp
-mkdir /tmp/tmp
-cd /tmp/tmp
-
 # set some stuff
 #echo 'net.ipv4.conf.eth0.arp_notify = 1' >> /etc/sysctl.conf
 #echo 'vm.swappiness = 0' >> /etc/sysctl.conf
 
 # our fstab is fonky
-cat > /etc/fstab <<'EOF'
-/dev/sda1 / ext4 errors=remount-ro,noatime 0 1
-EOF
+#cat > /etc/fstab <<'EOF'
+#/dev/sda1 / ext4 errors=remount-ro,noatime 0 1
+#EOF
 
 # set rackspace mirrors
 #sed -i 's%download.fedoraproject.org/pub%mirror.rackspace.com%g' /etc/yum.repos.d/fedora.repo
@@ -274,10 +275,6 @@ EOF
 #sed -i 's/#baseurl/baseurl/g' /etc/yum.repos.d/fedora-updates-testing.repo
 
 yum clean all
-
-# update all
-yum -y update
-yum -y upgrade
 
 chmod +x /etc/rc.d/rc.local
 systemctl enable rc-local.service
@@ -311,7 +308,6 @@ cat >> /etc/inittab <<'EOF'
 T0:23:respawn:/sbin/getty -L ttyS0 115200 xterm
 T4:23:respawn:/sbin/getty -L ttyS4 115200 xterm
 EOF
-
 
 # log packages
 wget http://KICK_HOST/kickstarts/package_postback.sh
