--- a/Fedora_22_Teeth.cfg
+++ b/Fedora_22_Teeth.cfg
@@ -7,8 +7,8 @@ install
 #cmdline
 
 # Install from a friendly mirror and add updates
-url --url=http://dl.fedoraproject.org/pub/fedora/linux/releases/21/Server/x86_64/os/
-repo --name=fedora --baseurl=http://dl.fedoraproject.org/pub/fedora/linux/releases/21/Everything/x86_64/os/
+url --url=http://dl.fedoraproject.org/pub/fedora/linux/releases/test/22_Beta/Server/x86_64/os/
+repo --name=fedora --baseurl=http://dl.fedoraproject.org/pub/fedora/linux/development/22/x86_64/os/
 
 # Language and keyboard setup
 lang en_US.UTF-8
@@ -148,6 +148,9 @@ systemctl enable cloud-init
 systemctl enable cloud-config
 systemctl enable cloud-final
 
+# temporary yum to dnf workaround
+sed -i 's%cmd.append("-t")%#cmd.append("-t")%' /usr/lib/python2.7/site-packages/cloudinit/distros/rhel.py
+
 # our cloud-init config
 cat > /etc/cloud/cloud.cfg.d/10_rackspace.cfg <<'EOF'
 datasource_list: [ ConfigDrive, None ]
@@ -262,7 +265,6 @@ ln -s /boot/extlinux.conf /etc/extlinux.conf
 cat > /etc/modules-load.d/bonding.conf <<'EOF'
 bonding
 8021q
-alias bond0 bonding
 EOF
 
 dracut --regenerate-all --force
@@ -277,7 +279,7 @@ EOF
 
 # log packages
 wget http://KICK_HOST/kickstarts/package_postback.sh
-bash package_postback.sh Fedora_21_Teeth
+bash package_postback.sh Fedora_22_Teeth
 rm -rf /root/tmp
 echo "done"
 
