--- a/Ubuntu_14.04_Teeth.cfg
+++ b/Ubuntu_14.04_Teeth.cfg
@@ -56,7 +56,7 @@ preseed finish-install/reboot_in_progress note
 preseed partman/mount_style select traditional
 preseed user-setup/allow-password-weak boolean true
 preseed cdrom-detect/eject boolean false
-#preseed cloud-init/datasources string NoCloud, ConfigDrive
+preseed cloud-init/datasources string NoCloud, ConfigDrive
 
 # apt preseeds, note the release versions here
 preseed apt-setup/security_host string mirror.rackspace.com
@@ -76,6 +76,8 @@ preseed pkgsel/install-language-support boolean false
 %packages
 openssh-server
 cloud-init
+cloud-initramfs-dyn-netconf
+cloud-initramfs-growroot
 rsync
 tar
 wget
@@ -89,6 +91,7 @@ python3-yaml
 python-jsonpatch
 python-oauthlib
 init-system-helpers
+python-pip
 
 %post 
 #--interpreter /bin/bash
@@ -99,4 +102,3 @@ cd /tmp/tmp
 wget http://KICK_HOST/kickstarts/Ubuntu_14.04_Teeth_post.sh
 chmod +x Ubuntu_14.04_Teeth_post.sh
 bash Ubuntu_14.04_Teeth_post.sh
-
