--- a/Ubuntu_15.04_Teeth.cfg
+++ b/Ubuntu_15.04_Teeth.cfg
@@ -89,6 +89,12 @@ python3-yaml
 python-jsonpatch
 python-oauthlib
 python-jwt
+python-six
+python-prettytable
+python-serial
+python-configobj
+python-yaml
+python-requests
 
 %post 
 #--interpreter /bin/bash
