--- a/CentOS_6.cfg
+++ b/CentOS_6.cfg
@@ -224,7 +224,7 @@ cloud_config_modules:
  - runcmd
  - byobu
 # this bit scales some sysctl parameters to flavor type
-bootcmd:
+runcmd:
   - echo "net.ipv4.tcp_rmem = $(cat /proc/sys/net/ipv4/tcp_mem)" >> /etc/sysctl.conf
   - echo "net.ipv4.tcp_wmem = $(cat /proc/sys/net/ipv4/tcp_mem)" >> /etc/sysctl.conf
   - echo "net.core.rmem_max = $(cat /proc/sys/net/ipv4/tcp_mem | awk {'print $3'})" >> /etc/sysctl.conf
