--- a/CentOS_7_PVHVM.cfg
+++ b/CentOS_7_PVHVM.cfg
@@ -260,7 +260,7 @@ cloud_final_modules:
  - phone-home
  - final-message
 # this bit scales some sysctl parameters to flavor type
-bootcmd:
+runcmd:
   - echo "net.ipv4.tcp_rmem = $(cat /proc/sys/net/ipv4/tcp_mem)" >> /etc/sysctl.conf
   - echo "net.ipv4.tcp_wmem = $(cat /proc/sys/net/ipv4/tcp_mem)" >> /etc/sysctl.conf
   - echo "net.core.rmem_max = $(cat /proc/sys/net/ipv4/tcp_mem | awk {'print $3'})" >> /etc/sysctl.conf
