--- a/Debian_Testing_Teeth.cfg
+++ b/Debian_Testing_Teeth.cfg
@@ -68,7 +68,7 @@ tasksel tasksel/first multiselect minimal
 
 ### Package selection
 cloud-init cloud-init/datasources multiselect None, ConfigDrive
-d-i pkgsel/include string openssh-server sudo rsync wget parted debconf-utils cloud-init cloud-initramfs-dyn-netconf cloud-initramfs-growroot ifenslave-2.6 vlan curl python-jinja2 python3-serial python3-yaml python-jsonpatch python-oauthlib python-jwt
+d-i pkgsel/include string openssh-server sudo rsync wget parted debconf-utils cloud-init cloud-initramfs-dyn-netconf cloud-initramfs-growroot ifenslave-2.6 vlan curl python3-serial python3-yaml python3-jinja2 python3-prettytable python3-oauthlib python3-configobj python3-requests python3-jsonpatch python3-six
 
 # Whether to upgrade packages after debootstrap.
 # Allowed values: none, safe-upgrade, full-upgrade
