--- a/Fedora_22_PVHVM.cfg
+++ b/Fedora_22_PVHVM.cfg
@@ -4,18 +4,22 @@
 
 # Install, not upgrade
 install
-#cmdline
+cmdline
 
 # Install from a friendly mirror and add updates
-url --url=http://dl.fedoraproject.org/pub/fedora/linux/releases/21/Server/x86_64/os/
-repo --name=fedora --baseurl=http://dl.fedoraproject.org/pub/fedora/linux/releases/21/Everything/x86_64/os/
+#url --url=http://dl.fedoraproject.org/pub/fedora/linux/releases/21/Server/x86_64/os/
+#url --url=http://dl.fedoraproject.org/pub/fedora/linux/development/22/x86_64/os/
+url --url=http://dl.fedoraproject.org/pub/fedora/linux/releases/test/22_Beta/Server/x86_64/os/
+#repo --name=fedora --baseurl=http://dl.fedoraproject.org/pub/fedora/linux/releases/21/Everything/x86_64/os/
+repo --name=fedora --baseurl=http://dl.fedoraproject.org/pub/fedora/linux/development/22/x86_64/os/
+#repo --name=fedora --baseurl=http://dl.fedoraproject.org/pub/fedora/linux/releases/test/22_Beta/Server/x86_64/os/
 
 # Language and keyboard setup
 lang en_US.UTF-8
 keyboard us
 
 # Configure DHCP networking w/optional IPv6, firewall on
-network --onboot yes --bootproto dhcp --ipv6 auto --hostname localhost --device ens3 
+network --onboot yes --device eth0 --bootproto dhcp --ipv6 auto --hostname localhost
 firewall --service=ssh
 
 # Set timezone
@@ -30,17 +34,17 @@ selinux --permissive
 
 # Services running at boot
 services --enabled network,sshd
-services --disabled sendmail,NetworkManager
+services --disabled sendmail
 
 # Disable anything graphical
 skipx
-text
+#text
 
 # Setup the disk
 zerombr
 clearpart --all --initlabel
 part / --fstype=ext4 --grow --size=1024 --asprimary
-#bootloader --location=mbr --boot-drive=sda --timeout=1 --append="root=/dev/sda1 console=ttyS4,115200n8 8250.nr_uarts=5 modprobe.blacklist=mei_me net.ifnames=0 biosdevname=0" --extlinux
+#bootloader --timeout=1 --append="console=ttyS0,115200n8 console=hvc0 console=tty0" --extlinux
 # extlinux bootloader is done manually in %post so that future kernel updates write the conf correctly
 # using the extlinux option from anaconda with that custom in %post breaks booting
 bootloader --disabled
@@ -49,88 +53,77 @@ bootloader --disabled
 shutdown --eject
 
 # Minimal package set
-%packages --excludedocs
-#--nobase
+%packages --excludedocs --nobase
 @core
-authconfig
 kernel
 grubby
 cloud-init
 cloud-utils
+
+# We need this image to be portable; also, rescue mode isn't useful here.
+dracut-config-generic
+-dracut-config-rescue
+
+# Not needed with pv-grub (as in EC2), and pulled in automatically
+# by anaconda, but appliance-creator needs the hint
 syslinux-extlinux 
+
+# Needed initially, but removed below.
+# update: not removed below 
 firewalld
+
+# extras
 rsync
 tar
 wget
 curl
-python-jsonpatch
-pyserial
-python-jinja2
-python-oauth2
-rsyslog
 which
-yum-plugin-versionlock
--dracut-config-rescue
+
+# Some things from @core we can do without in a minimal install
 -biosdevname
 -plymouth
 -NetworkManager
 -iprutils
+
 # really, no thanks grub2
-#-grub2-tools
-#-grub2
+-grub2-tools
+-grub2
 
-%end
-
-%post --nochroot
-cat >> /etc/resolv.conf <<'EOF'
-nameserver 8.8.8.8
-EOF
-cp /etc/resolv.conf /mnt/sysimage/etc/resolv.conf
 %end
 
 %post --erroronfail
-exec < /dev/tty3 > /dev/tty3
-chvt 3
-echo
-echo "################################"
-echo "# Running Post Configuration   #"
-echo "################################"
-(
+
 # set bootable
-
-# update all
-yum -y update
-yum -y upgrade
-
-parted -s /dev/sda set 1 boot on
-
-# tmp tmp
-mkdir /tmp/tmp
-cd /tmp/tmp
+parted -s /dev/xvda set 1 boot on
 
 # setup systemd to boot to the right runlevel
-echo -n "Setting default runlevel to multiuser text mode"
 rm -f /etc/systemd/system/default.target
 ln -s /lib/systemd/system/multi-user.target /etc/systemd/system/default.target
 
 # If you want to remove rsyslog and just use journald, remove this!
-echo -n "Disabling persistent journal"
 rmdir /var/log/journal/ 
 
-echo -n "Network fixes"
+# this is installed by default but we don't need it in virt
+yum -C -y remove linux-firmware
+
 # initscripts don't like this file to be missing.
 cat > /etc/sysconfig/network << EOF
 NETWORKING=yes
 NOZEROCONF=yes
 EOF
 
-# fix dns
-echo "dns=none" >> /etc/NetworkManager/NetworkManager.conf
-
 # For cloud images, 'eth0' _is_ the predictable device name, since
 # we don't want to be tied to specific virtual (!) hardware
-#rm -f /etc/udev/rules.d/70*
-#ln -s /dev/null /etc/udev/rules.d/80-net-name-slot.rules
+rm -f /etc/udev/rules.d/70*
+ln -s /dev/null /etc/udev/rules.d/80-net-name-slot.rules
+
+# simple eth0 config, again not hard-coded to the build hardware
+cat > /etc/sysconfig/network-scripts/ifcfg-eth0 << EOF
+DEVICE="eth0"
+BOOTPROTO="static"
+ONBOOT="yes"
+TYPE="Ethernet"
+EOF
 
 # generic localhost names
 cat > /etc/hosts << EOF
@@ -138,65 +131,21 @@ cat > /etc/hosts << EOF
 ::1         localhost localhost.localdomain localhost6 localhost6.localdomain6
 EOF
 
-# custom cloud-init rpm
-wget http://KICK_HOST/cloud-init/cloud-init-0.7.7-el7.rpm
-#wget http://7b52f5445f1d047c988b-5b9b71e9a69b2db171149d34296914b6.r70.cf2.rackcdn.com/cloud-init-0.7.5-14rackspace.x86_64.rpm
-rpm -Uvh --nodeps cloud*.rpm
-yum versionlock add cloud-init
-systemctl enable cloud-init-local
-systemctl enable cloud-init
-systemctl enable cloud-config
-systemctl enable cloud-final
+# Because memory is scarce resource in most cloud/virt environments,
+# and because this impedes forensics, we are differing from the Fedora
+# default of having /tmp on tmpfs.
+echo "Disabling tmpfs for /tmp."
+systemctl mask tmp.mount
 
 # our cloud-init config
 cat > /etc/cloud/cloud.cfg.d/10_rackspace.cfg <<'EOF'
-datasource_list: [ ConfigDrive, None ]
+manage-resolv-conf: false
 disable_root: False
-ssh_pwauth: False
+ssh_pwauth: True
 ssh_deletekeys: False
 resize_rootfs: noblock
-manage_etc_hosts: localhost
-growpart:
-  mode: auto
-  devices: ['/']
-system_info:
-  distro: fedora
-  default_user:
-    name: root
-    lock_passwd: True
-
-cloud_config_modules:
- - disk_setup
- - mounts
- - ssh-import-id
- - locale
- - set-passwords
- - package-update-upgrade-install
- - yum-add-repo
- - timezone
- - puppet
- - chef
- - salt-minion
- - mcollective
- - disable-ec2-metadata
- - runcmd
- - byobu
-
-cloud_init_modules:
- - migrator
- - bootcmd
- - write-files
- - growpart
- - resizefs
- - set_hostname
- - update_hostname
- - update_etc_hosts
- - rsyslog
- - users-groups
- - ssh
-
+# this bit scales some sysctl parameters to flavor type
 runcmd:
-  - rm -f /root/anaconda-ks.cfg
   - echo "net.ipv4.tcp_rmem = $(cat /proc/sys/net/ipv4/tcp_mem)" >> /etc/sysctl.conf
   - echo "net.ipv4.tcp_wmem = $(cat /proc/sys/net/ipv4/tcp_mem)" >> /etc/sysctl.conf
   - echo "net.core.rmem_max = $(cat /proc/sys/net/ipv4/tcp_mem | awk {'print $3'})" >> /etc/sysctl.conf
@@ -207,17 +156,28 @@ runcmd:
   - sysctl -p
 EOF
 
-# Cloud init logging config fix for verbose
-sed -i 's/ - \[ \*log_base, \*log_syslog ]/# - \[ \*log_base, \*log_syslog ]/g' /etc/cloud/cloud.cfg.d/05_logging.cfg
+# tmp tmp
+mkdir /tmp/tmp
+cd /tmp/tmp
+
+# install xen tools
+wget http://ce3598b91333d7474379-b85ce4d8c2253d3876bef92f62a263f8.r84.cf5.rackcdn.com/xe-guest-utilities-6.2.0-1120.x86_64.rpm
+wget http://ce3598b91333d7474379-b85ce4d8c2253d3876bef92f62a263f8.r84.cf5.rackcdn.com/xe-guest-utilities-xenstore-6.2.0-1120.x86_64.rpm
+rpm -Uhv xe-guest-utilities*.rpm
+
+# install agent
+wget https://github.com/rackerlabs/openstack-guest-agents-unix/releases/download/1.39.1/nova-agent-1.39-1.x86_64.rpm
+rpm -Uhv nova-agent*
 
 # set some stuff
-#echo 'net.ipv4.conf.eth0.arp_notify = 1' >> /etc/sysctl.conf
-#echo 'vm.swappiness = 0' >> /etc/sysctl.conf
+echo 'net.ipv4.conf.eth0.arp_notify = 1' >> /etc/sysctl.conf
+echo 'vm.swappiness = 0' >> /etc/sysctl.conf
 
 # our fstab is fonky
-#cat > /etc/fstab <<'EOF'
-#/dev/sda1 / ext4 errors=remount-ro,noatime 0 1
-#EOF
+cat > /etc/fstab <<'EOF'
+/dev/xvda1 / ext4 errors=remount-ro,noatime,barrier=0 0 1
+#/dev/xvdc1 none swap sw 0 0
+EOF
 
 # set rackspace mirrors
 #sed -i 's%download.fedoraproject.org/pub%mirror.rackspace.com%g' /etc/yum.repos.d/fedora.repo
@@ -233,14 +193,69 @@ sed -i 's/ - \[ \*log_base, \*log_syslog ]/# - \[ \*log_base, \*log_syslog ]/g' 
 #sed -i 's/#baseurl/baseurl/g' /etc/yum.repos.d/fedora-updates.repo
 #sed -i 's/#baseurl/baseurl/g' /etc/yum.repos.d/fedora-updates-testing.repo
 
+# update all
+yum -y update
+yum -y upgrade
+
+# cloud-init fixes for nova-agent race condition
+cat > /usr/lib/systemd/system/cloud-init-local.service <<'EOF'
+[Unit]
+Description=Initial cloud-init job (pre-networking)
+Wants=local-fs.target
+After=local-fs.target
+
+[Service]
+Type=oneshot
+ExecStartPre=/usr/bin/sleep 20
+ExecStart=/usr/bin/cloud-init init --local
+RemainAfterExit=yes
+TimeoutSec=0
+
+# Output needs to appear in instance console output
+StandardOutput=journal+console
+
+[Install]
+WantedBy=multi-user.target
+EOF
+
+systemctl enable cloud-init-local
+systemctl enable cloud-init
+systemctl enable cloud-config
+systemctl enable cloud-final
+
+# some systemd workarounds
+sed -i 's/XenServer Virtual Machine Tools/xe-linux-distribution/g' /etc/init.d/xe-linux-distribution
+update-rc.d xe-linux-distribution defaults
+
+# intention is to move this bit into nova-agent instead
+cat > /usr/lib/systemd/system/nova-agent.service <<'EOF'
+[Unit]
+Description=nova-agent
+Wants=local-fs.target
+After=local-fs.target xe-linux-distribution.service
+
+[Service]
+Type=oneshot
+ExecStart=/etc/init.d/nova-agent start
+RemainAfterExit=yes
+TimeoutSec=0
+
+# Output needs to appear in instance console output
+StandardOutput=journal+console
+
+[Install]
+WantedBy=multi-user.target
+EOF
+systemctl enable nova-agent
+
 chmod +x /etc/rc.d/rc.local
 systemctl enable rc-local.service
-systemctl disable NetworkManager.service
 
+yum -y install kernel
 # make double sure grub/extlinux are happy
 # remove any grub entries and
 # manually create extlinux file
-dd if=/usr/share/syslinux/mbr.bin of=/dev/sda bs=512 count=1
+dd if=/usr/share/syslinux/mbr.bin of=/dev/xvda bs=512 count=1
 extlinux --install /boot
 rm -rf /boot/grub*
 version=$(rpm -q kernel --queryformat='%{VERSION}-%{RELEASE}.%{ARCH}\n' | tail -n 1)
@@ -250,47 +265,26 @@ default linux
 
 LABEL linux
       KERNEL /boot/vmlinuz-$version
-      APPEND root=/dev/sda1 console=ttyS4,115200n8 8250.nr_uarts=5 modprobe.blacklist=mei_me
+      APPEND root=/dev/xvda1 console=ttyS0,115200n8 console=hvc0 console=tty0
       initrd /boot/initramfs-$version.img
 EOF
 rm -f /etc/extlinux.conf
 ln -s /boot/extlinux.conf /etc/extlinux.conf
 
-#      APPEND root=/dev/sda1 console=ttyS4,115200n8 8250.nr_uarts=5 modprobe.blacklist=mei_me net.ifnames=0 biosdevname=0
-
-# another teeth specific
-cat > /etc/modules-load.d/bonding.conf <<'EOF'
-bonding
-8021q
-alias bond0 bonding
-EOF
-
-dracut --regenerate-all --force
-
-sed -i 's/WARNING/DEBUG/g' /etc/cloud/cloud.cfg.d/05_logging.cfg
-
-# more teeth console changes
-cat >> /etc/inittab <<'EOF'
-T0:23:respawn:/sbin/getty -L ttyS0 115200 xterm
-T4:23:respawn:/sbin/getty -L ttyS4 115200 xterm
-EOF
-
 # log packages
 wget http://KICK_HOST/kickstarts/package_postback.sh
-bash package_postback.sh Fedora_21_Teeth
+bash package_postback.sh Fedora_22_PVHVM
 rm -rf /root/tmp
-echo "done"
 
 # clean up
-rm -f /etc/sysconfig/network-scripts/ifcfg-ens3
 passwd -d root
-passwd -l root
 yum clean all
 truncate -c -s 0 /var/log/yum.log
 echo "" > /etc/machine-id
 rm -f /root/anaconda-ks.cfg
 rm -f /etc/ssh/ssh_host_*
-echo "" > /etc/resolv.conf
+rm -f /etc/resolv.conf
+touch /etc/resolv.conf
 rm -f /root/.bash_history
 rm -f /root/.nano_history
 rm -f /root/.lesshst
@@ -299,6 +293,5 @@ rm -rf /tmp/tmp
 for k in $(find /var/log -type f); do echo > $k; done
 for k in $(find /tmp -type f); do rm -f $k; done
 for k in $(find /root -type f \( ! -iname ".*" \)); do rm -f $k; done
-) 2>&1 | /usr/bin/tee /var/log/post_install_chvt.log
-chvt 1
+
 %end
