--- a/Red_Hat_Enterprise_Linux_6_VMware_Rax.cfg
+++ b/Red_Hat_Enterprise_Linux_6_VMware_Rax.cfg
@@ -1,3 +1,12 @@
+%pre --log=/tmp/log/installer.log --interpreter=/bin/sh
+dd if=/dev/zero of=/dev/sda bs=512 count=1
+parted -s /dev/sda mklabel msdos
+parted -s /dev/sda -a cylinder mkpart primary ext3 0MB 2048MB
+parted -s /dev/sda -a cylinder mkpart primary linux-swap 2048MB 4096MB
+parted -s /dev/sda -a cylinder mkpart primary ext3 4096MB 100%
+partprobe
+%end
+
 # Install, not upgrade
 install
 cmdline
@@ -40,10 +49,14 @@ skipx
 #text
 
 # Setup the disk
-zerombr
-clearpart --all --initlabel
-part / --fstype=ext4 --grow --size=1024 --asprimary
-bootloader --timeout=1 --append="console=hvc0"
+#zerombr
+#clearpart --all --initlabel
+#part / --fstype=ext4 --grow --size=1024 --asprimary
+part /tmp --onpart=/dev/sda1 --fstype=ext3
+part swap --onpart=/dev/sda2
+part / --onpart=/dev/sda3 --asprimary --fstype=ext3
+bootloader --timeout=1 
+#--append="console=hvc0"
 
 # Shutdown when the kickstart is done
 #shutdown
@@ -118,7 +131,6 @@ screen
 sharutils
 smartmontools
 strace
-#xfsprogs
 
 %end
 
@@ -225,23 +237,27 @@ system_info:
   distro: rhel
 EOF
 
-# use a static fstab
+# use a static fstab with no uuids
 cat > /etc/fstab <<'EOF'
+#
+# /etc/fstab
+#
 # Accessible filesystems, by reference, are maintained under '/dev/disk'
 # See man pages fstab(5), findfs(8), mount(8) and/or blkid(8) for more info
 #
-/dev/sda1       / ext4 defaults,noatime 1 1
-/etc/TMPFILE.img   /tmp   ext4    rw,loop,nodev,nosuid,noexec    0 0
-tempfs  /dev/shm tmpfs   defaults,nodev,nosuid,noexec 0 0
-devpts /dev/pts devpts gid=5,mode=620 0 0
-sysfs /sys sysfs defaults 0 0
-proc /proc proc defaults 0 0
+/dev/sda1               /tmp                    ext3    defaults        1 2
+/dev/sda2               swap                    swap    defaults        0 0
+/dev/sda3               /                       ext3    defaults        1 1
+tmpfs                   /dev/shm                tmpfs   defaults        0 0
+devpts                  /dev/pts                devpts  gid=5,mode=620  0 0
+sysfs                   /sys                    sysfs   defaults        0 0
+proc                    /proc                   proc    defaults        0 0
 EOF
 
 # make necessary paths
 mkdir -p /root/.rackspace/mngd_storage
 mkdir -p /root/.rackspace/mngd_backup 
-mkdir -p /root/.rackspace/sophos
+#mkdir -p /root/.rackspace/sophos
 
 # storage
 wget --directory-prefix=/root/.rackspace/mngd_storage http://INTERNAL_HOST/vendors/storage/mngd_storage-gold.tgz
@@ -251,7 +267,7 @@ wget --directory-prefix=/root/.rackspace http://INTERNAL_HOST/vendors/rackspace-
 wget --directory-prefix=/root/.rackspace http://INTERNAL_HOST/vendors/rackspace-cust/enterprise/managed-nimbus-installer.tar.gz
 
 # sophos
-wget --directory-prefix=/root/.rackspace/sophos http://INTERNAL_HOST/vendors/sophos/sophos.tar.gz
+#wget --directory-prefix=/root/.rackspace/sophos http://INTERNAL_HOST/vendors/sophos/sophos.tar.gz
 
 # managed backup
 wget --directory-prefix=/root/.rackspace/mngd_backup http://INTERNAL_HOST/vendors/commvault/commvault8install.tar.gz
@@ -291,7 +307,7 @@ for k in $(find /etc/yum.repos.d -type f\( ! -name "*epel*" \)); do rm -f $k; do
 echo > /etc/yum.repos.d/rhel-source.repo
 
 # force grub to use generic disk labels, bootloader above does not do this
-sed -i 's%root=.*%root=/dev/sda1%g' /boot/grub/grub.conf
+sed -i 's%root=.*%root=/dev/sda3%g' /boot/grub/grub.conf
 
 # no soup for you
 cat >> /etc/yum.conf <<'EOF'
@@ -312,12 +328,12 @@ wget http://KICK_HOST/kickstarts/package_postback.sh
 bash package_postback.sh Red_Hat_Enterprise_Linux_6_VMware_Rax
 
 # separate tmp file
-rm -rf /tmp/*
-dd if=/dev/zero of=/etc/TMPFILE.img bs=1 count=1 seek=2147483648
-yes | mkfs.ext4 /etc/TMPFILE.img
-mount -o loop,rw /etc/TMPFILE.img /mnt
-chmod 1777 /mnt
-umount /mnt
+#rm -rf /tmp/*
+#dd if=/dev/zero of=/etc/TMPFILE.img bs=1 count=1 seek=2147483648
+#yes | mkfs.ext4 /etc/TMPFILE.img
+#mount -o loop,rw /etc/TMPFILE.img /mnt
+#chmod 1777 /mnt
+#umount /mnt
 
 # clean up
 yum clean all
