--- a/Scientific_Linux_7_PVHVM.cfg
+++ b/Scientific_Linux_7_PVHVM.cfg
@@ -4,8 +4,10 @@ cmdline
 
 # Install from a friendly mirror and add updates
 #url --url=http://mirror.lstn.net/scientific/7rolling/x86_64/os/
-url --url=http://mirror.lstn.net/scientific/7/x86_64/os/
-repo --name=base --baseurl=http://mirror.lstn.net/scientific/7rolling/x86_64/os/
+#url --url=http://mirror.lstn.net/scientific/7/x86_64/os/
+url --url=http://mirror.oss.ou.edu/scientific/7x/x86_64/os/
+#repo --name=base --baseurl=http://mirror.lstn.net/scientific/7rolling/x86_64/os/
+repo --name=base --baseurl=http://mirror.oss.ou.edu/scientific/7x/x86_64/os/
 repo --name=epel --baseurl=http://mirror.rackspace.com/epel/7/x86_64/
 
 # Language and keyboard setup
@@ -252,7 +254,7 @@ cloud_final_modules:
  - phone-home
  - final-message
 # this bit scales some sysctl parameters to flavor type
-bootcmd:
+runcmd:
   - echo "net.ipv4.tcp_rmem = $(cat /proc/sys/net/ipv4/tcp_mem)" >> /etc/sysctl.conf
   - echo "net.ipv4.tcp_wmem = $(cat /proc/sys/net/ipv4/tcp_mem)" >> /etc/sysctl.conf
   - echo "net.core.rmem_max = $(cat /proc/sys/net/ipv4/tcp_mem | awk {'print $3'})" >> /etc/sysctl.conf
