--- a/Ubuntu_12.04_PVHVM.cfg
+++ b/Ubuntu_12.04_PVHVM.cfg
@@ -106,7 +106,7 @@ ssh_pwauth: True
 ssh_deletekeys: False
 resize_rootfs: True
 # this bit scales some sysctl parameters to flavor type
-bootcmd:
+runcmd:
   - echo "net.ipv4.tcp_rmem = $(cat /proc/sys/net/ipv4/tcp_mem)" >> /etc/sysctl.conf
   - echo "net.ipv4.tcp_wmem = $(cat /proc/sys/net/ipv4/tcp_mem)" >> /etc/sysctl.conf
   - echo "net.core.rmem_max = $(cat /proc/sys/net/ipv4/tcp_mem | awk {'print $3'})" >> /etc/sysctl.conf
