syncing untracked changes, mostly fixes for bug reports

--- a/Fedora_22_PVHVM.cfg
+++ b/Fedora_22_PVHVM.cfg
@@ -7,11 +7,13 @@ install
 cmdline
 
 # Install from a friendly mirror and add updates
+url --url=http://dl.fedoraproject.org/pub/fedora/linux/releases/22/Server/x86_64/os/
+repo --name=fedora --baseurl=http://dl.fedoraproject.org/pub/fedora/linux/releases/22/Everything/x86_64/os/
 #url --url=http://dl.fedoraproject.org/pub/fedora/linux/releases/21/Server/x86_64/os/
 #url --url=http://dl.fedoraproject.org/pub/fedora/linux/development/22/x86_64/os/
-url --url=http://dl.fedoraproject.org/pub/fedora/linux/releases/test/22_Beta/Server/x86_64/os/
+#url --url=http://dl.fedoraproject.org/pub/fedora/linux/releases/test/22_Beta/Server/x86_64/os/
 #repo --name=fedora --baseurl=http://dl.fedoraproject.org/pub/fedora/linux/releases/21/Everything/x86_64/os/
-repo --name=fedora --baseurl=http://dl.fedoraproject.org/pub/fedora/linux/development/22/x86_64/os/
+#repo --name=fedora --baseurl=http://dl.fedoraproject.org/pub/fedora/linux/development/22/x86_64/os/
 #repo --name=fedora --baseurl=http://dl.fedoraproject.org/pub/fedora/linux/releases/test/22_Beta/Server/x86_64/os/
 
 # Language and keyboard setup
@@ -139,6 +141,7 @@ systemctl mask tmp.mount
 
 # our cloud-init config
 cat > /etc/cloud/cloud.cfg.d/10_rackspace.cfg <<'EOF'
+datasource_list: [ ConfigDrive, None ]
 manage-resolv-conf: false
 disable_root: False
 ssh_pwauth: True
