--- a/Red_Hat_Enterprise_Linux_6_VMware_Rax.cfg
+++ b/Red_Hat_Enterprise_Linux_6_VMware_Rax.cfg
@@ -256,7 +256,7 @@ EOF
 
 # make necessary paths
 mkdir -p /root/.rackspace/mngd_storage
-mkdir -p /root/.rackspace/mngd_backup 
+mkdir -p /root/.rackspace/mngd_backup
 #mkdir -p /root/.rackspace/sophos
 
 # storage
@@ -270,11 +270,15 @@ wget --directory-prefix=/root/.rackspace http://INTERNAL_HOST/vendors/rackspace-
 #wget --directory-prefix=/root/.rackspace/sophos http://INTERNAL_HOST/vendors/sophos/sophos.tar.gz
 
 # managed backup
-wget --directory-prefix=/root/.rackspace/mngd_backup http://INTERNAL_HOST/vendors/commvault/commvault8install.tar.gz
-wget --directory-prefix=/root/.rackspace/mngd_backup http://INTERNAL_HOST/vendors/commvault/commvault9install.tar.gz
+#wget --directory-prefix=/root/.rackspace/mngd_backup http://INTERNAL_HOST/vendors/commvault/commvault8install.tar.gz
+#wget --directory-prefix=/root/.rackspace/mngd_backup http://INTERNAL_HOST/vendors/commvault/commvault9install.tar.gz
+#wget --directory-prefix=/root/.rackspace/mngd_backup http://INTERNAL_HOST/vendors/commvault/RHEL5/cvinstall.egg
 wget --directory-prefix=/etc/profile.d http://INTERNAL_HOST/vendors/commvault/commvault.sh
-wget --directory-prefix=/root/.rackspace/mngd_backup http://INTERNAL_HOST/vendors/commvault/RHEL5/cvinstall.egg
 wget --directory-prefix=/root/.rackspace/mngd_backup http://INTERNAL_HOST/vendors/commvault/RHEL6/cvinstall.egg
+wget --directory-prefix=/root/.rackspace/mngd_backup http://INTERNAL_HOST/vendors/commvault/CommVaultInstallerV10.tar.gz
+cd /root/.rackspace/mngd_backup
+tar xzvf *.tar.gz
+cd /tmp/tmp
 
 # vmtools
 wget --directory-prefix=/tmp/tmp http://packages.vmware.com/tools/keys/VMWARE-PACKAGING-GPG-DSA-KEY.pub
