--- a/Ubuntu_15.04_Teeth.cfg
+++ b/Ubuntu_15.04_Teeth.cfg
@@ -76,6 +76,8 @@ preseed pkgsel/install-language-support boolean false
 %packages
 openssh-server
 cloud-init
+cloud-initramfs-dyn-netconf
+cloud-initramfs-growroot
 rsync
 tar
 wget
