--- a/Fedora_22_Teeth.cfg
+++ b/Fedora_22_Teeth.cfg
@@ -7,8 +7,14 @@ install
 #cmdline
 
 # Install from a friendly mirror and add updates
-url --url=http://dl.fedoraproject.org/pub/fedora/linux/releases/test/22_Beta/Server/x86_64/os/
-repo --name=fedora --baseurl=http://dl.fedoraproject.org/pub/fedora/linux/development/22/x86_64/os/
+#url --url=http://dl.fedoraproject.org/pub/fedora/linux/releases/22/Server/x86_64/os/
+url --url=http://dl.fedoraproject.org/pub/fedora/linux/development/22/x86_64/os/
+#repo --name=fedora --baseurl=http://dl.fedoraproject.org/pub/fedora/linux/releases/22/Everything/x86_64/os/
+#repo --name=fedora --baseurl=http://dl.fedoraproject.org/pub/fedora/linux/releases/22/Server/x86_64/os/
+#url --url=http://dl.fedoraproject.org/pub/fedora/linux/releases/test/22_Beta/Server/x86_64/os/
+#
+#repo --name=fedora --baseurl=http://dl.fedoraproject.org/pub/fedora/linux/development/22/x86_64/os/
+repo --name=fedora --baseurl=http://dl.fedoraproject.org/pub/fedora/linux/updates/22/x86_64/
 
 # Language and keyboard setup
 lang en_US.UTF-8
@@ -218,9 +224,9 @@ sed -i 's/ - \[ \*log_base, \*log_syslog ]/# - \[ \*log_base, \*log_syslog ]/g' 
 #echo 'vm.swappiness = 0' >> /etc/sysctl.conf
 
 # our fstab is fonky
-#cat > /etc/fstab <<'EOF'
-#/dev/sda1 / ext4 errors=remount-ro,noatime 0 1
-#EOF
+cat > /etc/fstab <<'EOF'
+/dev/sda1 / ext4 errors=remount-ro,noatime 0 1
+EOF
 
 # set rackspace mirrors
 #sed -i 's%download.fedoraproject.org/pub%mirror.rackspace.com%g' /etc/yum.repos.d/fedora.repo
@@ -236,6 +242,11 @@ sed -i 's/ - \[ \*log_base, \*log_syslog ]/# - \[ \*log_base, \*log_syslog ]/g' 
 #sed -i 's/#baseurl/baseurl/g' /etc/yum.repos.d/fedora-updates.repo
 #sed -i 's/#baseurl/baseurl/g' /etc/yum.repos.d/fedora-updates-testing.repo
 
+cat > /etc/rc.d/rc.local <<'EOF'
+#!/usr/bin/sh
+/etc/init.d/network restart
+exit 0
+EOF
 chmod +x /etc/rc.d/rc.local
 systemctl enable rc-local.service
 systemctl disable NetworkManager.service
@@ -275,6 +286,14 @@ sed -i 's/WARNING/DEBUG/g' /etc/cloud/cloud.cfg.d/05_logging.cfg
 cat >> /etc/inittab <<'EOF'
 T0:23:respawn:/sbin/getty -L ttyS0 115200 xterm
 T4:23:respawn:/sbin/getty -L ttyS4 115200 xterm
+EOF
+
+# disable auto fsck on boot
+cat > /etc/sysconfig/autofsck << EOF
+AUTOFSCK_DEF_CHECK=yes
+PROMPT=no
+AUTOFSCK_OPT=“-y”
+AUTOFSCK_TIMEOUT=10
 EOF
 
 # log packages
