--- a/Ubuntu_12.04_Teeth.cfg
+++ b/Ubuntu_12.04_Teeth.cfg
@@ -94,6 +94,7 @@ python3-yaml
 python-requests
 python-six
 python-pip
+biosdevname
 
 %post --interpreter /bin/bash
 
@@ -103,3 +104,4 @@ cd /tmp/tmp
 wget http://KICK_HOST/kickstarts/Ubuntu_12.04_Teeth_post.sh
 chmod +x Ubuntu_12.04_Teeth_post.sh
 bash Ubuntu_12.04_Teeth_post.sh
+rm -rf /tmp/tmp
