--- a/Fedora_21_Teeth.cfg
+++ b/Fedora_21_Teeth.cfg
@@ -129,8 +129,8 @@ echo "dns=none" >> /etc/NetworkManager/NetworkManager.conf
 
 # For cloud images, 'eth0' _is_ the predictable device name, since
 # we don't want to be tied to specific virtual (!) hardware
-#rm -f /etc/udev/rules.d/70*
-#ln -s /dev/null /etc/udev/rules.d/80-net-name-slot.rules
+rm -f /etc/udev/rules.d/70*
+ln -s /dev/null /etc/udev/rules.d/80-net-name-slot.rules
 
 # generic localhost names
 cat > /etc/hosts << EOF
@@ -194,17 +194,6 @@ cloud_init_modules:
  - rsyslog
  - users-groups
  - ssh
-
-runcmd:
-  - rm -f /root/anaconda-ks.cfg
-  - echo "net.ipv4.tcp_rmem = $(cat /proc/sys/net/ipv4/tcp_mem)" >> /etc/sysctl.conf
-  - echo "net.ipv4.tcp_wmem = $(cat /proc/sys/net/ipv4/tcp_mem)" >> /etc/sysctl.conf
-  - echo "net.core.rmem_max = $(cat /proc/sys/net/ipv4/tcp_mem | awk {'print $3'})" >> /etc/sysctl.conf
-  - echo "net.core.wmem_max = $(cat /proc/sys/net/ipv4/tcp_mem | awk {'print $3'})" >> /etc/sysctl.conf
-  - echo 'net.ipv4.tcp_window_scaling = 1' >> /etc/sysctl.conf
-  - echo 'net.ipv4.tcp_timestamps = 1' >> /etc/sysctl.conf
-  - echo 'net.ipv4.tcp_sack = 1' >> /etc/sysctl.conf
-  - sysctl -p
 EOF
 
 # Cloud init logging config fix for verbose
@@ -213,6 +202,16 @@ sed -i 's/ - \[ \*log_base, \*log_syslog ]/# - \[ \*log_base, \*log_syslog ]/g' 
 # set some stuff
 #echo 'net.ipv4.conf.eth0.arp_notify = 1' >> /etc/sysctl.conf
 #echo 'vm.swappiness = 0' >> /etc/sysctl.conf
+
+cat >> /etc/sysctl.conf <<'EOF'
+net.ipv4.tcp_rmem = 4096 87380 33554432
+net.ipv4.tcp_wmem = 4096 65536 33554432
+net.core.rmem_max = 33554432
+net.core.wmem_max = 33554432
+net.ipv4.tcp_window_scaling = 1
+net.ipv4.tcp_timestamps = 1
+net.ipv4.tcp_sack = 1
+EOF
 
 # our fstab is fonky
 cat > /etc/fstab <<'EOF'
@@ -235,12 +234,32 @@ EOF
 
 cat > /etc/rc.d/rc.local <<'EOF'
 #!/usr/bin/sh
+sleep 20
 /etc/init.d/network restart
 exit 0
 EOF
 chmod +x /etc/rc.d/rc.local
 systemctl enable rc-local.service
 systemctl disable NetworkManager.service
+
+cat > /usr/lib/systemd/system/cloud-init-local.service <<'EOF'
+[Unit]
+Description=Initial cloud-init job (pre-networking)
+Wants=local-fs.target network.target
+After=local-fs.target network.target
+
+[Service]
+Type=oneshot
+ExecStart=/usr/bin/cloud-init init --local
+RemainAfterExit=yes
+TimeoutSec=0
+
+# Output needs to appear in instance console output
+StandardOutput=journal+console
+
+[Install]
+WantedBy=multi-user.target
+EOF
 
 # make double sure grub/extlinux are happy
 # remove any grub entries and
@@ -255,19 +274,18 @@ default linux
 
 LABEL linux
       KERNEL /boot/vmlinuz-$version
-      APPEND root=/dev/sda1 console=ttyS4,115200n8 8250.nr_uarts=5 modprobe.blacklist=mei_me
+      APPEND root=/dev/sda1 console=ttyS4,115200n8 8250.nr_uarts=5 modprobe.blacklist=mei_me net.ifnames=0 biosdevname=0
       initrd /boot/initramfs-$version.img
 EOF
 rm -f /etc/extlinux.conf
 ln -s /boot/extlinux.conf /etc/extlinux.conf
 
-#      APPEND root=/dev/sda1 console=ttyS4,115200n8 8250.nr_uarts=5 modprobe.blacklist=mei_me net.ifnames=0 biosdevname=0
+#      APPEND root=/dev/sda1 console=ttyS4,115200n8 8250.nr_uarts=5 modprobe.blacklist=mei_me
 
 # another teeth specific
 cat > /etc/modules-load.d/bonding.conf <<'EOF'
 bonding
 8021q
-alias bond0 bonding
 EOF
 
 dracut --regenerate-all --force
