--- a/Fedora_22_PVHVM.cfg
+++ b/Fedora_22_PVHVM.cfg
@@ -7,13 +7,12 @@ install
 cmdline
 
 # Install from a friendly mirror and add updates
-url --url=http://dl.fedoraproject.org/pub/fedora/linux/releases/22/Server/x86_64/os/
-repo --name=fedora --baseurl=http://dl.fedoraproject.org/pub/fedora/linux/releases/22/Everything/x86_64/os/
-#url --url=http://dl.fedoraproject.org/pub/fedora/linux/releases/21/Server/x86_64/os/
-#url --url=http://dl.fedoraproject.org/pub/fedora/linux/development/22/x86_64/os/
+#url --url=http://dl.fedoraproject.org/pub/fedora/linux/releases/22/Server/x86_64/os/
+#repo --name=fedora --baseurl=http://dl.fedoraproject.org/pub/fedora/linux/releases/22/Everything/x86_64/os/
+#
+url --url=http://dl.fedoraproject.org/pub/fedora/linux/development/22/x86_64/os/
 #url --url=http://dl.fedoraproject.org/pub/fedora/linux/releases/test/22_Beta/Server/x86_64/os/
-#repo --name=fedora --baseurl=http://dl.fedoraproject.org/pub/fedora/linux/releases/21/Everything/x86_64/os/
-#repo --name=fedora --baseurl=http://dl.fedoraproject.org/pub/fedora/linux/development/22/x86_64/os/
+repo --name=fedora --baseurl=http://dl.fedoraproject.org/pub/fedora/linux/development/22/x86_64/os/
 #repo --name=fedora --baseurl=http://dl.fedoraproject.org/pub/fedora/linux/releases/test/22_Beta/Server/x86_64/os/
 
 # Language and keyboard setup
@@ -147,16 +146,6 @@ disable_root: False
 ssh_pwauth: True
 ssh_deletekeys: False
 resize_rootfs: noblock
-# this bit scales some sysctl parameters to flavor type
-runcmd:
-  - echo "net.ipv4.tcp_rmem = $(cat /proc/sys/net/ipv4/tcp_mem)" >> /etc/sysctl.conf
-  - echo "net.ipv4.tcp_wmem = $(cat /proc/sys/net/ipv4/tcp_mem)" >> /etc/sysctl.conf
-  - echo "net.core.rmem_max = $(cat /proc/sys/net/ipv4/tcp_mem | awk {'print $3'})" >> /etc/sysctl.conf
-  - echo "net.core.wmem_max = $(cat /proc/sys/net/ipv4/tcp_mem | awk {'print $3'})" >> /etc/sysctl.conf
-  - echo 'net.ipv4.tcp_window_scaling = 1' >> /etc/sysctl.conf
-  - echo 'net.ipv4.tcp_timestamps = 1' >> /etc/sysctl.conf
-  - echo 'net.ipv4.tcp_sack = 1' >> /etc/sysctl.conf
-  - sysctl -p
 EOF
 
 # tmp tmp
@@ -175,6 +164,16 @@ rpm -Uhv nova-agent*
 # set some stuff
 echo 'net.ipv4.conf.eth0.arp_notify = 1' >> /etc/sysctl.conf
 echo 'vm.swappiness = 0' >> /etc/sysctl.conf
+
+cat >> /etc/sysctl.conf <<'EOF'
+net.ipv4.tcp_rmem = 4096 87380 33554432
+net.ipv4.tcp_wmem = 4096 65536 33554432
+net.core.rmem_max = 33554432
+net.core.wmem_max = 33554432
+net.ipv4.tcp_window_scaling = 1
+net.ipv4.tcp_timestamps = 1
+net.ipv4.tcp_sack = 1
+EOF
 
 # our fstab is fonky
 cat > /etc/fstab <<'EOF'
@@ -273,6 +272,13 @@ LABEL linux
 EOF
 rm -f /etc/extlinux.conf
 ln -s /boot/extlinux.conf /etc/extlinux.conf
+
+# nova-agent and krb5-libs conflict workaround
+cat > /etc/dnf/protected.d/dnf.conf <<'EOF'
+dnf
+krb5-libs
+nova-agent
+EOF
 
 # log packages
 wget http://KICK_HOST/kickstarts/package_postback.sh
