--- a/Fedora_22_Teeth.cfg
+++ b/Fedora_22_Teeth.cfg
@@ -135,8 +135,8 @@ echo "dns=none" >> /etc/NetworkManager/NetworkManager.conf
 
 # For cloud images, 'eth0' _is_ the predictable device name, since
 # we don't want to be tied to specific virtual (!) hardware
-#rm -f /etc/udev/rules.d/70*
-#ln -s /dev/null /etc/udev/rules.d/80-net-name-slot.rules
+rm -f /etc/udev/rules.d/70*
+ln -s /dev/null /etc/udev/rules.d/80-net-name-slot.rules
 
 # generic localhost names
 cat > /etc/hosts << EOF
@@ -203,17 +203,6 @@ cloud_init_modules:
  - rsyslog
  - users-groups
  - ssh
-
-runcmd:
-  - rm -f /root/anaconda-ks.cfg
-  - echo "net.ipv4.tcp_rmem = $(cat /proc/sys/net/ipv4/tcp_mem)" >> /etc/sysctl.conf
-  - echo "net.ipv4.tcp_wmem = $(cat /proc/sys/net/ipv4/tcp_mem)" >> /etc/sysctl.conf
-  - echo "net.core.rmem_max = $(cat /proc/sys/net/ipv4/tcp_mem | awk {'print $3'})" >> /etc/sysctl.conf
-  - echo "net.core.wmem_max = $(cat /proc/sys/net/ipv4/tcp_mem | awk {'print $3'})" >> /etc/sysctl.conf
-  - echo 'net.ipv4.tcp_window_scaling = 1' >> /etc/sysctl.conf
-  - echo 'net.ipv4.tcp_timestamps = 1' >> /etc/sysctl.conf
-  - echo 'net.ipv4.tcp_sack = 1' >> /etc/sysctl.conf
-  - sysctl -p
 EOF
 
 # Cloud init logging config fix for verbose
@@ -222,6 +211,16 @@ sed -i 's/ - \[ \*log_base, \*log_syslog ]/# - \[ \*log_base, \*log_syslog ]/g' 
 # set some stuff
 #echo 'net.ipv4.conf.eth0.arp_notify = 1' >> /etc/sysctl.conf
 #echo 'vm.swappiness = 0' >> /etc/sysctl.conf
+
+cat >> /etc/sysctl.conf <<'EOF'
+net.ipv4.tcp_rmem = 4096 87380 33554432
+net.ipv4.tcp_wmem = 4096 65536 33554432
+net.core.rmem_max = 33554432
+net.core.wmem_max = 33554432
+net.ipv4.tcp_window_scaling = 1
+net.ipv4.tcp_timestamps = 1
+net.ipv4.tcp_sack = 1
+EOF
 
 # our fstab is fonky
 cat > /etc/fstab <<'EOF'
@@ -244,6 +243,7 @@ EOF
 
 cat > /etc/rc.d/rc.local <<'EOF'
 #!/usr/bin/sh
+sleep 20
 /etc/init.d/network restart
 exit 0
 EOF
@@ -264,13 +264,13 @@ default linux
 
 LABEL linux
       KERNEL /boot/vmlinuz-$version
-      APPEND root=/dev/sda1 console=ttyS4,115200n8 8250.nr_uarts=5 modprobe.blacklist=mei_me
+      APPEND root=/dev/sda1 console=ttyS4,115200n8 8250.nr_uarts=5 modprobe.blacklist=mei_me net.ifnames=0 biosdevname=0
       initrd /boot/initramfs-$version.img
 EOF
 rm -f /etc/extlinux.conf
 ln -s /boot/extlinux.conf /etc/extlinux.conf
 
-#      APPEND root=/dev/sda1 console=ttyS4,115200n8 8250.nr_uarts=5 modprobe.blacklist=mei_me net.ifnames=0 biosdevname=0
+#      APPEND root=/dev/sda1 console=ttyS4,115200n8 8250.nr_uarts=5 modprobe.blacklist=mei_me
 
 # another teeth specific
 cat > /etc/modules-load.d/bonding.conf <<'EOF'
