--- a/Scientific_Linux_7_PVHVM.cfg
+++ b/Scientific_Linux_7_PVHVM.cfg
@@ -196,6 +196,16 @@ rpm -Uhv nova-agent*
 echo 'net.ipv4.conf.eth0.arp_notify = 1' >> /etc/sysctl.conf
 echo 'vm.swappiness = 0' >> /etc/sysctl.conf
 
+cat >> /etc/sysctl.conf <<'EOF'
+net.ipv4.tcp_rmem = 4096 87380 33554432
+net.ipv4.tcp_wmem = 4096 65536 33554432
+net.core.rmem_max = 33554432
+net.core.wmem_max = 33554432
+net.ipv4.tcp_window_scaling = 1
+net.ipv4.tcp_timestamps = 1
+net.ipv4.tcp_sack = 1
+EOF
+
 # our fstab is fonky
 cat > /etc/fstab <<'EOF'
 /dev/xvda1		/                       ext4     defaults,noatime 1 1
@@ -253,16 +263,6 @@ cloud_final_modules:
  - scripts-user
  - phone-home
  - final-message
-# this bit scales some sysctl parameters to flavor type
-runcmd:
-  - echo "net.ipv4.tcp_rmem = $(cat /proc/sys/net/ipv4/tcp_mem)" >> /etc/sysctl.conf
-  - echo "net.ipv4.tcp_wmem = $(cat /proc/sys/net/ipv4/tcp_mem)" >> /etc/sysctl.conf
-  - echo "net.core.rmem_max = $(cat /proc/sys/net/ipv4/tcp_mem | awk {'print $3'})" >> /etc/sysctl.conf
-  - echo "net.core.wmem_max = $(cat /proc/sys/net/ipv4/tcp_mem | awk {'print $3'})" >> /etc/sysctl.conf
-  - echo 'net.ipv4.tcp_window_scaling = 1' >> /etc/sysctl.conf
-  - echo 'net.ipv4.tcp_timestamps = 1' >> /etc/sysctl.conf
-  - echo 'net.ipv4.tcp_sack = 1' >> /etc/sysctl.conf
-  - sysctl -p
 EOF
 
 cat > /usr/lib/systemd/system/cloud-init-local.service <<'EOF'
